2008-09-10  Sebastien Pouliot  <sebastien@ximian.com>

	* Test.Rules.Design.Generic.mdp: New. Add MD project file.

2008-09-07  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMethodWithUnusedGenericTypeTest.cs: New. Unit tests for
	AvoidMethodWithUnusedGenericTypeRule

2008-08-30  Sebastien Pouliot  <sebastien@ximian.com>

	* UseGenericEventHandlerTest.cs: New. Unit tests for
	UseGenericEventHandlerRule

2008-08-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ImplementGenericCollectionInterfacesTest.cs: Moved from Design.
	* Makefile.am: New. Build file.