@@ -16,6 +16,8 @@
   <Contents>
     <File name="ImplementGenericCollectionInterfacesTest.cs" subtype="Code" buildaction="Compile" />
     <File name="UseGenericEventHandlerTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidMethodWithUnusedGenericTypeTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="PreferGenericsOverRefObjectTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
